--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.50.0"
   }
 }
